--- a/about.html
+++ b/about.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About Us</title>
+   <title>About experts circle</title>
     <!-- FavIcon-->
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="./assets/images/favicon.png"
-    />
+    <!-- FavIcon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#092C4C">
+    <meta name="msapplication-TileColor" content="#092C4C">
+    <meta name="theme-color" content="#092C4C">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Bootstrap style-->
     <link
@@ -34,16 +38,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-
-    <!--Owl Carouse css-->
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-    <!--AOS css-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <!--Animate css-->
-    <link rel="stylesheet" href="css/animate.min.css" />
-    <!-- Custom Style-->
-    <link rel="stylesheet" href="./css/checkbox.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
 
@@ -86,7 +80,7 @@
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="./contact-us.html"
-                        >Contact Us</a
+                        >Contact us</a
                       >
                     </li>
                   </ul>
@@ -132,13 +126,13 @@
                 <a href="./index.html">Home</a>
               </li>
               <li>
-                <a class="myactive" href="./about.html">About Us</a>
+                <a class="myactive" href="./about.html">About us</a>
               </li>
               <li>
-                <a href="./index.html#how_work">How It Works</a>
+                <a href="./index.html#how_work">How it works</a>
               </li>
               <li>
-                <a href="./contact-us.html">Contact Us</a>
+                <a href="./contact-us.html">Contact us</a>
               </li>
             </ul>
           </div>
@@ -330,176 +324,6 @@
 
       <!-- Client Feedback  -->
       <div class="feedback-team-wrapper">
-        <div class="client-feedback-wrapper">
-          <div class="container-fluid">
-            <div class="max-width">
-              <div class="row">
-                <!-- <div class="col-md-4">
-                  <div class="feedback-left">
-                    <h3>Client <span>Feedback</span></h3>
-                    <p>
-                      Primis facilisis penatibus potenti eleifend nostra porta
-                      pellentesque pede enim proin amet ipsum letius auctor
-                      mauris morbi accumsan risus sociosqu cubilia inceptos
-                      torquent lectus purus imperdiet
-                    </p>
-                  </div>
-                </div> -->
-                <div class="col-md-12">
-                  <div class="slider-container">
-                    <div class="owl-carousel owl-theme">
-                      <div class="item">
-                        <div class="slider-wrapper">
-                          <i
-                            class="fa fa-quote-left quote-left"
-                            aria-hidden="true"
-                          ></i>
-                          <i
-                            class="fa fa-quote-right quote-right"
-                            aria-hidden="true"
-                          ></i>
-                          <div class="inner">
-                            <img src="./assets/images/slider.png" alt="" />
-                            <p>
-                              Vulputate sit quam lacinia pulvinar fames elit
-                              curae commodo augue nibh eleifend cubilia nam quis
-                              porta torquent velit interdum nec taciti aenean
-                              praesent rhoncus blandit penatibus laoreet proin
-                              diam erat bibendum auctor consectetur convallis
-                              finibus suspendisse volutpat sagittis ornare
-                              nullam
-                            </p>
-                            <div class="myborder"></div>
-                            <div class="details">
-                              <h6>Romi Jensen</h6>
-                              <p>Founder</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="item">
-                        <div class="slider-wrapper">
-                          <i
-                            class="fa fa-quote-left quote-left"
-                            aria-hidden="true"
-                          ></i>
-                          <i
-                            class="fa fa-quote-right quote-right"
-                            aria-hidden="true"
-                          ></i>
-                          <div class="inner">
-                            <img src="./assets/images/slider.png" alt="" />
-                            <p>
-                              Vulputate sit quam lacinia pulvinar fames elit
-                              curae commodo augue nibh eleifend cubilia nam quis
-                              porta torquent velit interdum nec taciti aenean
-                              praesent rhoncus blandit penatibus laoreet proin
-                              diam erat bibendum auctor consectetur convallis
-                              finibus suspendisse volutpat sagittis ornare
-                              nullam
-                            </p>
-                            <div class="myborder"></div>
-                            <div class="details">
-                              <h6>Romi Jensen</h6>
-                              <p>Founder</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="item">
-                        <div class="slider-wrapper">
-                          <i
-                            class="fa fa-quote-left quote-left"
-                            aria-hidden="true"
-                          ></i>
-                          <i
-                            class="fa fa-quote-right quote-right"
-                            aria-hidden="true"
-                          ></i>
-                          <div class="inner">
-                            <img src="./assets/images/slider.png" alt="" />
-                            <p>
-                              Vulputate sit quam lacinia pulvinar fames elit
-                              curae commodo augue nibh eleifend cubilia nam quis
-                              porta torquent velit interdum nec taciti aenean
-                              praesent rhoncus blandit penatibus laoreet proin
-                              diam erat bibendum auctor consectetur convallis
-                              finibus suspendisse volutpat sagittis ornare
-                              nullam
-                            </p>
-                            <div class="myborder"></div>
-                            <div class="details">
-                              <h6>Romi Jensen</h6>
-                              <p>Founder</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="item">
-                        <div class="slider-wrapper">
-                          <i
-                            class="fa fa-quote-left quote-left"
-                            aria-hidden="true"
-                          ></i>
-                          <i
-                            class="fa fa-quote-right quote-right"
-                            aria-hidden="true"
-                          ></i>
-                          <div class="inner">
-                            <img src="./assets/images/slider.png" alt="" />
-                            <p>
-                              Vulputate sit quam lacinia pulvinar fames elit
-                              curae commodo augue nibh eleifend cubilia nam quis
-                              porta torquent velit interdum nec taciti aenean
-                              praesent rhoncus blandit penatibus laoreet proin
-                              diam erat bibendum auctor consectetur convallis
-                              finibus suspendisse volutpat sagittis ornare
-                              nullam
-                            </p>
-                            <div class="myborder"></div>
-                            <div class="details">
-                              <h6>Romi Jensen</h6>
-                              <p>Founder</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="item">
-                        <div class="slider-wrapper">
-                          <i
-                            class="fa fa-quote-left quote-left"
-                            aria-hidden="true"
-                          ></i>
-                          <i
-                            class="fa fa-quote-right quote-right"
-                            aria-hidden="true"
-                          ></i>
-                          <div class="inner">
-                            <img src="./assets/images/slider.png" alt="" />
-                            <p>
-                              Vulputate sit quam lacinia pulvinar fames elit
-                              curae commodo augue nibh eleifend cubilia nam quis
-                              porta torquent velit interdum nec taciti aenean
-                              praesent rhoncus blandit penatibus laoreet proin
-                              diam erat bibendum auctor consectetur convallis
-                              finibus suspendisse volutpat sagittis ornare
-                              nullam
-                            </p>
-                            <div class="myborder"></div>
-                            <div class="details">
-                              <h6>Romi Jensen</h6>
-                              <p>Founder</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
         <!-- Our Team  -->
         <div class="our-team-wrapper">
           <div class="container-fluid">
@@ -581,8 +405,8 @@
                   <h6>Company</h6>
                   <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./about.html">About Us</a></li>
-                    <li><a href="./index.html#work_flow">How It Works</a></li>
+                    <li><a href="./about.html">About us</a></li>
+                    <li><a href="./index.html#work_flow">How it works</a></li>
                     <li><a href="#">Faq</a></li>
                     <li><a href="./contact-us.html">Contact Us</a></li>
                   </ul>
@@ -631,10 +455,7 @@
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"
     ></script>
-    <!-- counter up  -->
-    <script src="./js/jquery.counterup.min.js"></script>
-    <script src="./js/jquery.waypoints.min.js"></script>
-    <!-- counter up  -->
+   
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
@@ -642,10 +463,6 @@
     ></script>
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <!--AOS Js-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!--Owl Carouse js-->
-    <script src="js/owl.carousel.min.js"></script>
     <!-- Custom Js-->
     <script src="js/custom.js"></script>
   </body>
