--- a/contact-us.html
+++ b/contact-us.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Contact Us</title>
+    <title>Contact us</title>
     <!-- FavIcon-->
-    <link
-      rel="shortcut icon"
-      type="image/png"
-      href="./assets/images/favicon.png"
-    />
+    <!-- FavIcon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./assets/favicon/safari-pinned-tab.svg" color="#092C4C">
+    <meta name="msapplication-TileColor" content="#092C4C">
+    <meta name="theme-color" content="#092C4C">
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Bootstrap style-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -34,15 +34,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <!--Owl Carouse css-->
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
-    <!--AOS css-->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <!--Animate css-->
-    <link rel="stylesheet" href="css/animate.min.css" />
-    <!-- Custom Style-->
-    <link rel="stylesheet" href="./css/checkbox.css" />
     <link rel="stylesheet" type="text/css" href="css/contact.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
@@ -130,10 +121,10 @@
                 <a href="./index.html">Home</a>
               </li>
               <li>
-                <a href="./about.html">About Us</a>
+                <a href="./about.html">About us</a>
               </li>
               <li>
-                <a href="./index.html#how_work">How It Works</a>
+                <a href="./index.html#how_work">How it works</a>
               </li>
               <li>
                 <a class="myactive" href="./contact-us.html">Contact Us</a>
@@ -153,10 +144,10 @@
         <div class="contact-us-wrapper">
           <div class="container">
             <div class="contact-inner">
-              <h3>Send Us a <span>message</span></h3>
+              <h3>Send us a <span>message</span></h3>
               <p>
                 Please use the following form to contact us. We will get back to
-                you in 24 hours.
+                you within 24 hours.
               </p>
             </div>
           </div>
@@ -234,9 +225,9 @@
                               class="placeholder"
                               disabled
                             >
-                              Who are you?
+                              About you?
                             </option>
-                            <option value="client">Client</option>
+                            <option value="employer">Employer</option>
                             <option value="candidate">Candidate</option>
                           </select>
                         </div>
@@ -313,10 +304,10 @@
                   <h6>Company</h6>
                   <ul>
                     <li><a href="./index.html">Home</a></li>
-                    <li><a href="./about.html">About Us</a></li>
-                    <li><a href="./index.html#work_flow">How It Works</a></li>
+                    <li><a href="./about.html">About us</a></li>
+                    <li><a href="./index.html#work_flow">How it works</a></li>
                     <li><a href="#">Faq</a></li>
-                    <li><a href="./contact-us.html">Contact Us</a></li>
+                    <li><a href="./contact-us.html">Contact us</a></li>
                   </ul>
                 </div>
               </div>
@@ -363,10 +354,7 @@
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"
     ></script>
-    <!-- counter up  -->
-    <script src="./js/jquery.counterup.min.js"></script>
-    <script src="./js/jquery.waypoints.min.js"></script>
-    <!-- counter up  -->
+ 
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
@@ -374,11 +362,6 @@
     ></script>
     <!-- Popper JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <!--AOS Js-->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <!--Owl Carouse js-->
-    <script src="js/owl.carousel.min.js"></script>
-    <!-- Custom Js-->
     <script src="js/custom.js"></script>
     <!-- Submit the Form to Google Using "AJAX" -->
     <script data-cfasync="false" src="./js/form-submission-handler.js"></script>
