--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         </div>
         <div class="container-fluid">
           <div class="max-width">
-            <img class="big_img" src="./assets/images/flow-main.svg" alt="" />
+            <img class="big_img mt-3" src="./assets/images/flowsvg.svg" alt="" />
           </div>
           <!-- Bootstrap Tabs  -->
           <div class="tabs-button">
